--- a/style.css
+++ b/style.css
@@ -9,15 +9,17 @@ body{
     background-repeat: no-repeat;
 }
 .topnav {
-    background-color: #333;
-    overflow: hidden;
+    background-color: color: #f2f2f2;
+    margin-left: auto;
+    margin-right: auto;
+    grid-column:1 / span 3;
   }
 
   .topnav a {
     float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 10px 10px;
     text-decoration: none;
     font-size: 17px;
   }
@@ -30,4 +32,23 @@ body{
   .topnav a.active {
     background-color: rgb(0,0,255);
     color: rgb(255, 255, 0);
+  }
+
+  body{
+    margin: 20px;
+  }
+  .wrapper{
+    display:grid;
+    grid-template-columns: 800px;
+    grid-gap: 10px;
+    color: #444;
+  }
+  .box{
+    background-color: #445a5c;
+    color: #fff;
+    border-radius: 2px;
+    padding: 10px;
+    
+    margin-left: auto;
+    margin-right: auto;
   }
