--- a/style.css
+++ b/style.css
@@ -10,9 +10,12 @@ body{
 }
 .topnav {
     background-color: color: #f2f2f2;
-    margin-left: auto;
-    margin-right: auto;
-    grid-column:1 / span 3;
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
+    /*grid-column:1 / span 3;*/
+    padding: 20px 20px;
+    grid-column-start: 1;
+    grid-column-end: 3;
   }
 
   .topnav a {
@@ -39,16 +42,42 @@ body{
   }
   .wrapper{
     display:grid;
-    grid-template-columns: 800px;
+    /*grid-template-columns: repeat(3, 1fr);*/
+    grid-template-columns: minmax(200px,100px);
+    /*grid-template-columns: 800px;*/
     grid-gap: 10px;
+    grid-auto-rows:auto);
     color: #444;
   }
-  .box{
+  .fullbox{
     background-color: #445a5c;
     color: #fff;
-    border-radius: 2px;
+    border-radius: 4px;
     padding: 10px;
-    
-    margin-left: auto;
-    margin-right: auto;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    /*grid-column:1 / 4;*/
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
+  }
+  .qbox{
+    background-color: #445a5c;
+    color: #fff;
+    border-radius: 4px;
+    padding: 10px;
+    /*grid-column:1 / 2;*/
+    grid-column-start: 1;
+    grid-column-end: 1;
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
+  }
+  .abox{
+    background-color: #445a5c;
+    color: #fff;
+    border-radius: 4px;
+    padding: 10px;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
   }
