adding images, updating css, qualifications.html, contact.html

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     /*grid-column:1 / span 3;*/
     padding: 20px 20px;
     grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-end: 4;
   }
 
   .topnav a {
@@ -57,7 +57,7 @@ body{
     border-radius: 4px;
     padding: 10px;
     grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-end: 4;
     /*grid-column:1 / 4;*/
     /*margin-left: auto;*/
     /*margin-right: auto;*/
@@ -68,8 +68,8 @@ body{
     border-radius: 4px;
     padding: 10px;
     /*grid-column:1 / 2;*/
-    grid-column-start: 1;
-    grid-column-end: 1;
+    /*grid-column-start: 1;*/
+    /*grid-column-end: 1;*/
     /*margin-left: auto;*/
     /*margin-right: auto;*/
   }
@@ -78,8 +78,9 @@ body{
     color: #fff;
     border-radius: 4px;
     padding: 10px;
-    grid-column-start: 2;
-    grid-column-end: 3;
+    /*grid-column-start: 2;*/
+    grid-column-start:2;
+    grid-column-end: 4;
     /*margin-left: auto;*/
     /*margin-right: auto;*/
   }
@@ -87,3 +88,16 @@ body{
     background-color: #445a5c;
     color: #67e8ff;
   }
+ 
+img{
+    transition: transform .2s;
+    width:auto;
+    height:200px;
+    margin:0 auto;
+    background-color: rgb(61, 61, 61);
+    border-radius: 10px;
+    border: 2px solid rgba(27, 27, 27, 0.041);
+}
+img:hover{
+    transform:scale(3) translatex(50px);
+}
