changin topnav background color

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     background-repeat: no-repeat;
 }
 .topnav {
-    background-color: #f2f2f2;
+    background-color: darkgrey;
     /*margin-left: auto;*/
     /*margin-right: auto;*/
     /*grid-column:1 / span 3;*/
